<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/guillotine_background"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activity_restaurant_guillotine_toolbar"
        style="@style/Toolbar"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/activity_restaurant_guillotine_hamburger"
            style="@style/ImageView.Hamburger"
            android:src="@drawable/ic_menu" />

        <com.benew.client.goodtogo.widget.CanaroTextView
            android:id="@+id/activity_restaurant_guillotine_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/guillotine_item_text_size"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        style="@style/LinearLayout.GuillotineItem"
        android:layout_marginTop="@dimen/guillotine_medium_margin">

        <com.benew.client.goodtogo.widget.CanaroTextView
            android:id="@+id/show_products"
            style="@style/TextView.GuillotineItem"
            android:text="@string/produits" />
    </LinearLayout>

    <LinearLayout
        style="@style/LinearLayout.GuillotineItem">

        <com.benew.client.goodtogo.widget.CanaroTextView
            android:id="@+id/add_products"
            style="@style/TextView.GuillotineItem"
            android:text="@string/ajouter_produits" />
    </LinearLayout>

    <LinearLayout
        style="@style/LinearLayout.GuillotineItem">

        <com.benew.client.goodtogo.widget.CanaroTextView
            android:id="@+id/profile"
            style="@style/TextView.GuillotineItem"
            android:text="@string/profil" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/guillotine_divider_height" />

    <LinearLayout
        style="@style/LinearLayout.GuillotineItem">

        <com.benew.client.goodtogo.widget.CanaroTextView
            android:id="@+id/logout"
            style="@style/TextView.GuillotineItem"
            android:text="@string/deconnexion" />
    </LinearLayout>
</LinearLayout>