<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Controllers.Fragments.EspaceRFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/enregistrement_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/titre_espace_resto"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="italic|bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_name_restaurant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enregistrement_title"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusTopStart="7dp"
        app:endIconMode="clear_text"
        app:boxStrokeColor="@color/guillotine_background"
        app:hintTextColor="@color/guillotine_background"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pseudo_connexion"
            android:textColorHint="@color/guillotine_background"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_password_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_input_name_restaurant"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusTopStart="7dp"
        app:boxStrokeColor="@color/guillotine_background"
        app:hintTextColor="@color/guillotine_background"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mot_de_passe_connexion"
            android:textColorHint="@color/guillotine_background"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/connexion_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_input_password_account"
        android:layout_marginTop="20dp"
        android:text="@string/boutton_connexion"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>